Fix and improve navigation bar

--- a/layouts/part/navbar-default.html
+++ b/layouts/part/navbar-default.html
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Rogiken wiki</a>
+			<a class="navbar-brand" href="/">Rogiken Blog</a>
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
@@ -15,8 +15,13 @@
 					<a href="https://www.rogiken.org/">Rogiken</a>
 				</li>
 				<li>
-					<!--<a href="https://blog.rogiken.org/">Blog</a>-->
-					<a href="http://titech-ssr.blog.jp/">Blog</a>
+					<a href="https://blog.rogiken.org/">Blog</a>
+				</li>
+				<li>
+					<a href="https://wiki.rogiken.org/">Wiki</a>
+				</li>
+				<li>
+					<a href="http://titech-ssr.blog.jp/">Blog (Old)</a>
 				</li>
 			</ul>
 			<!-- Hash of the commit -->
