プロフィールページに、著者の書いた記事一覧へのリンクを追加
Close #3.

--- a/layouts/member.html
+++ b/layouts/member.html
@@ -39,6 +39,9 @@
 						<%= web %></a>
 					</p>
 				<% end %>
+				<p>
+					<a href="<%= "/tags/author/#{member_year}/#{member_name}" %>"><i class="fa fa-files-o"></i> 書いた記事の一覧</a>
+				</p>
 			</div>
 		</div>
 		<div style="clear: both"></div>
